VA-783 Redesign - fix various summary page problems (#188)
* VA-783 resize side menu title

* VA-783 add tweaks for medium and small

* VA-783 style submitted message

* VA-783 remove commented code

* VA-783 Extend pattern on collapse

* VA-783 Make circles use variables

* VA-783 Fix focus cutoff

* VA-783 Fix focus for subsections

---------

--- a/src/styles/_navigationbar.scss
+++ b/src/styles/_navigationbar.scss
@@ -21,8 +21,8 @@
   .navigation-list {
     margin: 0;
     padding: 0 var(--h5p-theme-spacing-s);
-    position: sticky;
-    top: calc(var(--h5p-theme-spacing-xl)*3);
+    position: relative;
+    top: 1rem;
   }
 
   .large-navigation-list {
@@ -31,6 +31,10 @@
     flex: 1 1 auto;
     min-height: 58em;
   }
+}
+
+.h5p-showing-summary .navigation-list {
+  top: calc(-1 * var(--h5p-theme-spacing-xl));
 }
 
 .h5p-interactive-book-navigation-sectionlist {
@@ -162,6 +166,7 @@
   &.h5p-interactive-book-navigation-current {
     background-color: var(--h5p-theme-contrast-cta-light);
     border-bottom-color: white;
+    z-index: 1;
 
     .h5p-interactive-book-navigation-chapter-accordion {
       display: block;
