--- a/src/styles/_statusbar.scss
+++ b/src/styles/_statusbar.scss
@@ -13,8 +13,8 @@
 
   &.h5p-interactive-book-status-header {
     @include prefix(position, sticky, webkit);
-  
-    background: $background-color;
+    pointer-events: none;
+    background: transparent;
     top: 0;
     z-index: 2;
 
@@ -38,9 +38,11 @@
   }
 
   .h5p-interactive-book-status-side {
+    pointer-events: auto;
     display: flex;
     align-items: center;
     padding-left: var(--h5p-theme-spacing-s);
+    height: 3rem;
 
     .h5p-interactive-book-status-menu {
       background-color: var(--h5p-theme-contrast-cta-light);
@@ -95,7 +97,12 @@
     }
   }
 
+  .h5p-theme-pattern {
+    display: none;
+  }
+
   .h5p-interactive-book-status-main {
+    pointer-events: auto;
     display: grid;
     position: relative;
     grid-template-columns: min-content 1fr min-content;
@@ -106,10 +113,6 @@
 
     &:has(.h5p-interactive-book-status-fullscreen) {
       grid-template-columns: min-content 1fr min-content min-content;
-    }
-
-    .h5p-theme-pattern {
-      display: none;
     }
 
     .h5p-theme-nav-button {
@@ -238,9 +241,25 @@
 
 // Summary screen
 .h5p-interactive-book.h5p-showing-summary .h5p-interactive-book-status-header {
-  .h5p-interactive-book-status-main {
+  &:not(:has(.h5p-interactive-book-status-menu-active)) {
     background-color: var(--h5p-theme-main-cta-base);
+
+    > .h5p-theme-pattern {
+      display: block;
+    }
+
+    .h5p-interactive-book-status-menu {
+      z-index: 1;
+      background-color: var(--h5p-theme-contrast-cta);
+    }
+  }
+
+  .h5p-interactive-book-status-main {
     padding: var(--h5p-theme-spacing-s) var(--h5p-theme-spacing-s) calc(var(--h5p-theme-spacing-xl)*1.5) var(--h5p-theme-spacing-s);
+  }
+
+  &:has(.h5p-interactive-book-status-menu-active) .h5p-interactive-book-status-main {
+    background-color: var(--h5p-theme-main-cta-base);
 
     .h5p-theme-pattern {
       display: block;
